--- a/public/stylesheets/store.css
+++ b/public/stylesheets/store.css
@@ -45,7 +45,7 @@ header {
   justify-content: space-between;
   width: 100%;
   height: 80px;
-  background: #fff url(/images/logo.svg) center center no-repeat;
+  background: #fff url(/images/logo.png) center center no-repeat;
   border-bottom: 1px solid #f3f3ff;
 }
 
